--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "cocktail-drill",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
-  "scripts": {},
+  "main": "dist/index.js",
+  "type": "module",
+  "scripts": {
+    "compile": "tsc"
+  },
   "keywords": [],
   "author": "alexandermichaud-drizly",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.41"
+  }
 }
