--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^17.0.41",
     "concurrently": "^7.2.1",
+    "js-search": "^2.0.0",
     "tsc-alias": "^1.6.9"
   }
 }
