--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.41",
+    "array-shuffle": "^3.0.0",
     "concurrently": "^7.2.1",
     "js-search": "^2.0.0",
     "tsc-alias": "^1.6.9"
